# backtesting-engine

./: .coverage  .coveragerc  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  main.py  pyproject.toml  ruff.toml  tasks.py
.github/workflows/: test-and-audit.yml  test-lint-audit.yml  test.yml
data/: README.md  test_queue_file.json
data/performance_test_files/: test_queue_file_100_sims.json  test_queue_file_300_sims.json  test_queue_file_50_sims.json  test_queue_file_5_sims.json
notebooks/: README.md  pairs_trading.ipynb
scripts/: README.md  generate_test_queue_file.py  profile_backtesting_engine.py  run_multiprocess_performance_tests.py  run_performance_tests.py
src/backtesting_engine/: constants.py  engine.py  exceptions.py  interfaces.py  main.py  managers.py  metrics.py  plotter.py
src/backtesting_engine/analytics/: constants.py  interfaces.py  metrics.py  plotter.py
src/backtesting_engine/data/: data_loader.py  interfaces.py  lru_cache.py
src/backtesting_engine/strategies/: buy_and_hold.py  constants.py  exceptions.py  interfaces.py  mean_reversion.py  momentum.py  sma_crossover.py
src/data/: data_loader.py
src/strategies/: interfaces.py  sma_crossover.py
tests/backtesting_engine/: test_engine.py  test_managers.py  test_metrics.py
tests/backtesting_engine/analytics/: test_metrics.py
tests/backtesting_engine/data/: test_data_loader.py  test_lru_cache.py
tests/backtesting_engine/strategies/: test_buy_and_hold.py  test_mean_reversion.py  test_momentum.py  test_sma_crossover.py
tests/strategies/: test_sma_crossover.py
