[project]
name = "backtester"
version = "0.1.0"
description = "A backtesting engine for trading strategies."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Tom Aston", email = "mail@tomaston.dev"}
]
dependencies = [
    "yfinance>=0.2.65",
    "pandas",
    "numpy",
    "plotly",
    "matplotlib",
    "filelock>=3.18.0",
    "kaleido>=1.0.0",
    "snakeviz>=2.2.2",
    "jupyterlab>=4.4.7",
    "notebook>=7.4.5",
    "ipykernel>=6.30.1",
    "seaborn>=0.13.2",
    "scipy>=1.16.1",
    "scikit-learn>=1.7.1",
    "bokeh>=3.8.0",
    "ipywidgets>=8.1.7",
    "jupyter-contrib-nbextensions>=0.7.0",
    "jupyterlab-lsp>=5.2.0",
    "ipyparallel>=9.0.1",
    "jupyterlab-git>=0.51.2",
    "pandas-datareader>=0.10.0",
    "statsmodels>=0.14.5",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.4",
    "invoke>=2.2.0",
    "pyright>=1.1.403",
    "pre-commit>=4.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/backtesting_engine"]

[tool.uv.workspace]
members = [".",]

[tool.pyright]
pythonVersion = "3.11"
include = [
  "src/backtesting_engine/**/*.py",
  "tests/**/*.py"
]
exclude = [
  "tests/",
  "build/",
  "dist/",
  "venv/",
  "notebooks/",
]
reportMissingTypeStubs = false
reportMissingImports = true
reportOptionalSubscript = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
root = "src"
typeCheckingMode = "strict"
